# home-service-template

./: Cargo.toml  README.md  cargo-generate.toml  pre.rhai  update_date.py
.github/workflows/: update_date.yml
src/: main.rs
